--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,79 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+the most popular sport in the world?
+            </h1>
+          </div>
+          <div class="form">
+            <form>
+              <div class="form-group">
+                <label for="basketball" class="wrapper">
+                  Basketball
+                  <input type="radio" name="vote" id="basketball" required />
+                  <span class="checkmark"></span>
+                </label>
+              </div>
+              <div class="form-group">
+                <label for="cricket" class="wrapper">
+                  Cricket
+                  <input type="radio" name="vote" id="cricket" required />
+                  <span class="checkmark"></span>
+                </label>
+              </div>
+              <div class="form-group">
+                <label for="football" class="wrapper">
+                  Football
+                  <input type="radio" name="vote" id="football" required />
+                  <span class="checkmark"></span>
+                </label>
+              </div>
+
+              <div class="form-group">
+                <button type="submit">Submit</button>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="chart">
+          <canvas id="voteChart" width="400" height="400"></canvas>
+        </div>
+      </div>
+      <div class="stats">
+        <div class="count">
+          <h1 class="">Total Count</h1>
+          <h1 class="visible total-count">0</h1>
+        </div>
+        <div class="summary">
+          <div class="basketball-summary">
+            <div class="individual-count">
+              <h1>0</h1>
+            </div>
+            <div class="individual-nominee">
+              <h2>Basketball</h2>
+            </div>
+          </div>
+          <div class="cricket-summary">
+            <div class="individual-count">
+              <h1>0</h1>
+            </div>
+            <div class="individual-nominee">
+              <h2>Cricket</h2>
+            </div>
+          </div>
+          <div class="football-summary">
+            <div class="individual-count">
+              <h1>0</h1>
+            </div>
+            <div class="individual-nominee">
+              <h2>Football</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+  <script type="text/javascript" src="//media.twiliocdn.com/sdk/js/sync/v0.12/twilio-sync.min.js"></script>
+  <script>let token = <%- JSON.stringify(token) %>;</script>
+  <script src="/javascripts/script.js"></script>
+</body>
+
 </html>
