stocks branch but  data !update, {basketball: 0, cricket: 0, buy: null, football: 0}

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,26 @@
-the most popular sport in the world?
+Hold, sell, or buy?
             </h1>
           </div>
           <div class="form">
             <form>
               <div class="form-group">
-                <label for="basketball" class="wrapper">
-                  Basketball
-                  <input type="radio" name="vote" id="basketball" required />
+                <label for="hold" class="wrapper">
+                  Hold
+                  <input type="radio" name="vote" id="hold" required />
                   <span class="checkmark"></span>
                 </label>
               </div>
               <div class="form-group">
-                <label for="cricket" class="wrapper">
-                  Cricket
-                  <input type="radio" name="vote" id="cricket" required />
+                <label for="sell" class="wrapper">
+                  Sell
+                  <input type="radio" name="vote" id="sell" required />
                   <span class="checkmark"></span>
                 </label>
               </div>
               <div class="form-group">
-                <label for="football" class="wrapper">
-                  Football
-                  <input type="radio" name="vote" id="football" required />
+                <label for="buy" class="wrapper">
+                  Buy
+                  <input type="radio" name="vote" id="buy" required />
                   <span class="checkmark"></span>
                 </label>
               </div>
@@ -41,28 +41,28 @@ the most popular sport in the world?
           <h1 class="visible total-count">0</h1>
         </div>
         <div class="summary">
-          <div class="basketball-summary">
+          <div class="hold-summary">
             <div class="individual-count">
               <h1>0</h1>
             </div>
             <div class="individual-nominee">
-              <h2>Basketball</h2>
+              <h2>Hold</h2>
             </div>
           </div>
-          <div class="cricket-summary">
+          <div class="sell-summary">
             <div class="individual-count">
               <h1>0</h1>
             </div>
             <div class="individual-nominee">
-              <h2>Cricket</h2>
+              <h2>Sell</h2>
             </div>
           </div>
-          <div class="football-summary">
+          <div class="buy-summary">
             <div class="individual-count">
               <h1>0</h1>
             </div>
             <div class="individual-nominee">
-              <h2>Football</h2>
+              <h2>Buy</h2>
             </div>
           </div>
         </div>
