idk why click sell and hold goes up and vice versa

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-Hold, sell, or buy?
+Hold || sell GameStop?
             </h1>
           </div>
           <div class="form">
@@ -17,13 +17,6 @@ Hold, sell, or buy?
                   <span class="checkmark"></span>
                 </label>
               </div>
-              <div class="form-group">
-                <label for="buy" class="wrapper">
-                  Buy
-                  <input type="radio" name="vote" id="buy" required />
-                  <span class="checkmark"></span>
-                </label>
-              </div>
 
               <div class="form-group">
                 <button type="submit">Submit</button>
@@ -32,7 +25,7 @@ Hold, sell, or buy?
           </div>
         </div>
         <div class="chart">
-          <canvas id="voteChart" width="400" height="400"></canvas>
+          <canvas id="voteChart" width="25%" height="5%"></canvas>
         </div>
       </div>
       <div class="stats">
@@ -55,14 +48,6 @@ Hold, sell, or buy?
             </div>
             <div class="individual-nominee">
               <h2>Sell</h2>
-            </div>
-          </div>
-          <div class="buy-summary">
-            <div class="individual-count">
-              <h1>0</h1>
-            </div>
-            <div class="individual-nominee">
-              <h2>Buy</h2>
             </div>
           </div>
         </div>
